# toposynth

./: Cargo.toml  README.md  build.json  build_err_dsp.txt  build_err_dsp_v2.txt  build_err_dsp_v3.txt  build_err_dsp_v4.txt  build_err_dsp_v5.txt  build_err_dsp_v6.txt  build_err_dsp_v7.txt  build_error.txt  build_error_utf8.txt  build_errors_ui.txt  build_errors_ui_v2.txt  build_errors_ui_v3.txt  build_errors_ui_v4.txt  build_errors_ui_v5.txt  build_log.txt  build_report.txt  check_errors.txt  check_errors_2.txt  check_full.txt  check_full_2.txt  check_output.txt  check_result.txt  check_warnings.txt  clean_errors.txt  draw_error.txt  errors.txt  errors_lib.txt  final_check.txt  final_check_1.txt  final_check_2.txt  final_errors.txt  full_check.txt  full_errors.txt  full_log.txt  last_err.txt  log.txt  utf8.txt
src/: editor.css  editor.rs  lib.rs
src/dsp/: attractor.rs  engine.rs  filter.rs  mod.rs
