[package]
name = "toposynth"
version = "0.1.0"
edition = "2021"
authors = ["Antigravity"]
description = "Chaotic Topology Synthesizer"

[workspace]
members = [".", "xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git", package = "nih_plug_vizia" }
wide = "0.7.15" # Portable SIMD for audio
rand = "0.8.5"  # For random number generation if needed

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
